--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ledgerble",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Gui for Ledger CLI",
   "main": "main.js",
   "scripts": {
@@ -9,9 +9,12 @@
   "author": "Sean Bridges",
   "license": "Apache-2.0",
   "devDependencies": {
-    "electron": "^6.0.12"
+  },
+  "bin": {  
+     "ledgerble" : "ledgerble.js"
   },
   "dependencies": {
+    "electron": "^6.0.12",
     "binary-search": "^1.3.6",
     "bootstrap": "^4.1.2",
     "currency-symbol-map": "^4.0.4",
